--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.2.2'
     id 'io.spring.dependency-management' version '1.1.4'
     id 'org.graalvm.buildtools.native' version '0.9.28'
+    id("org.springframework.boot") version "3.2.2"
+    id("org.springdoc.openapi-gradle-plugin") version "1.8.0"
+    id("org.openapi.generator") version "6.1.0"
 }
 
 group = 'com.example'
@@ -18,9 +20,24 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-common:2.3.0'
+    implementation 'org.springframework.kafka:spring-kafka:3.1.2'
+    implementation 'org.projectlombok:lombok:1.18.30'
+    implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'org.apache.commons:commons-csv:1.10.0'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+
+openApi {
+    apiDocsUrl.set("http://localhost:8020/v3/api-docs")
+    outputDir.set(file("$buildDir/docs"))
+    outputFileName.set("swagger-02.yaml")
+    waitTimeInSeconds.set(10)
 }
